--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ dependencies {
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.22'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-hateoas', version: '2.6.2'
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
